--- a/skyfolk/static/sass/photo_detail.sass
+++ b/skyfolk/static/sass/photo_detail.sass
@@ -60,6 +60,7 @@ $blueskyfolk: #1e88e5
           display: block
         & .photo-title
           font-weight: 600
+          word-wrap: break-word
           margin-top: 10px
           display: block
         & .photo-date
