--- a/skyfolk/static/css/photo_detail.css
+++ b/skyfolk/static/css/photo_detail.css
@@ -54,6 +54,7 @@
           display: block; }
         .container-photo .photo .photo-details .legend-user-data .photo-title {
           font-weight: 600;
+          word-wrap: break-word;
           margin-top: 10px;
           display: block; }
         .container-photo .photo .photo-details .legend-user-data .photo-date {
