--- a/skyfolk/templates/account/profile_comments.html
+++ b/skyfolk/templates/account/profile_comments.html
@@ -3,24 +3,9 @@
 {% load app_filters %}
 {% load humanize %}
 {% load embed_video_tags %}
-<style>
-    .card-content img {
-        max-width: 100%;
-        max-height: 100%;
-        box-shadow: 0 1px 5px rgba(30, 136, 229, 0.15);
-    }
-    .comment .fa-share {
-        color: #1e88e5;
-        font-style: normal;
-    }
-    .comment .fa-user-plus {
-        color: #1e88e5;
-        font-style: normal;
-    }
-</style>
-
+    <div id="list-publications" class="infinite-container">
     {% for node in publications %}
-        <div class="row">
+        <div class="row infinite-item">
             <div class="col s12">
                 <div class="col s12 wrapper" id="pub-{{ node.pk }}" data-id="{{ user.pk }}"
                      {% if node.level > 0 and node.level < 3 %}style="min-width: 98% !important;"{% endif %}>
@@ -353,25 +338,14 @@
                 </div>
             </div>
         </div>
-    {% endfor %}
-{% if publications|length > 19 %}
-    {% with publications|last as last_pub %}
-        <div class="row" id="loader_skyline">
-            <div class="col s12">
-                <a class="waves-effect waves-light btn-large blue darken-1 white-text center"
-                   href="#"
-                   id="load_more_skyline"
-                   data-id="{{ last_pub.id }}"><i class=" material-icons left">expand_more</i>Cargar
-                    comentarios</a>
-                <div>
-                     <div class="progress" id="load_publications_skyline" style="display: none">
-                        <div class="indeterminate blue darken-1"></div>
-                     </div>
-                </div>
-            </div>
-        </div>
-    {% endwith %}
-    {% endif %} 
+        {% endfor %}
+    </div>
+    {% if publications.has_next %}
+        <a class="infinite-more-link waves-effect waves-light btn-large blue darken-1 white-text center" href="?page={{ publications.next_page_number }}&qs=publications">More</a>
+    {% endif %}
+    <div class="progress loading_skyline" style="display: none">
+        <div class="indeterminate blue darken-1"></div>
+    </div>
     <script>
     {% for s in pubs_shared %}
         $('#share-' + {{ s.shared_publication__id }}).children().text(' ' + {{ s.total }});
