--- a/skyfolk/templates/account/new_reply.html
+++ b/skyfolk/templates/account/new_reply.html
@@ -4,7 +4,7 @@ Nueva respuesta a una publicacion
 <div class="hidden" id="caja-comentario-{{ node.pk }}">
     <!-- REPLY FORM -->
     <form class="reply-form" method="post">{% csrf_token %}
-        <input name="author" type="hidden" value="{{ request.user.id }}">
+        <input name="author" type="hidden" value="{{ user.id }}">
         <input name="board_owner" type="hidden" value="{{ user_profile.id }}">
         <input name="parent" type="hidden" value="{{ node.id }}">
         <div class="row">
