--- a/skyfolk/templates/account/publication_detail.html
+++ b/skyfolk/templates/account/publication_detail.html
@@ -66,12 +66,10 @@
             </div>
         </div>
          {% for node in publication %}
-            <div class="row row-pub">
+            <div class="row row-pub" id="pub-{{ node.pk }}">
                 <div class="col s12">
                     <div class="row">
-                        <div class="col wrapper{% if node.level == 0 %} col offset-l1 l10 m11 s12 {% else %} offset-l2 l9 m10 s11{% endif %}" {% if node.level > 0 %}style="border-right: 2px solid #1e88e5;"{% endif %}
-                             id="pub-{{ node.pk }}"
-                             data-id="{{ user.pk }}">
+                        <div class="col wrapper{% if node.level == 0 %} col offset-l1 l10 m11 s12 {% else %} offset-l2 l9 m10 s11{% endif %}" data-id="{{ user.pk }}" {% if node.level > 0 %}style="border-right: 2px solid #1e88e5;"{% endif %}>
                              <span id="check-{{ node.pk }}" class="top-options zoom-pub tooltipped" data-position="bottom"
                   data-delay="50"
                   data-tooltip="Ver conversación completa"><a class="fa fa-plus-square-o" aria-hidden="true" href="/publication/{{ node.id }}/"></a></span>
@@ -96,7 +94,7 @@
                                             <span class="chip">
                                                 {% avatar node.parent.author %}
                                                 <i class="fa fa-reply"></i> <a
-                                                    href="/publication/{{ node.parent.id }}">@{{node.parent.author}} <b>#{{ node.level }}</b></a>
+                                                    href="/publication/{{ node.parent.id }}">@{{node.parent.author}}: {{ node.parent.content|truncatewords_html:10|safe }}</a>
                                             </span>
                                         {% endif %}
                                     </h2>
