--- a/photologue/templates/photologue/ajax_load_replies.html
+++ b/photologue/templates/photologue/ajax_load_replies.html
@@ -4,6 +4,12 @@
 {% load avatar_tags %}
 {% load mptt_tags %}
 {% load embed_video_tags %}
+
+<input type="hidden" value="{{ publications|length }}" class="childs_for_{{ pub_id }}">
+{% if publications.has_next %}
+    <input type="hidden" value="{{ publications.next_page_number }}" class="page_for_{{ pub_id }}">
+{% endif %}
+
 {% for node in publications %}
 <div class="row">
     <div class="col s12">
@@ -172,14 +178,17 @@
 {% if not node.is_leaf_node %}
 <div class="row">
     <div class="col s12">
-        {% with node.get_children_count as descendants %}
+        {% if node.level < 2 %}
+        {% with node.get_descendants_not_deleted as descendants %}
         {% if descendants > 0 %}
-            <a class="waves-effect waves-light btn-large blue darken-1 white-text center load_more_descendants"
-            href="#"
-            data-id="{{ node.id }}" data-created="{{ node.created|date:"U"}}"><i class=" material-icons left">expand_more</i>Cargar
-            comentarios (<span class="child_count">{{ descendants }}</span>)</a>
+        <a class="waves-effect waves-light btn-large blue darken-1 white-text center load_more_descendants"
+        href="#"
+        data-id="{{ node.id }}" data-created="{{ node.created|date:"U"}}"><i class=" material-icons left">expand_more</i>Cargar
+        comentarios (<span
+        class="child_count">{{ descendants }}</span>)</a>
         {% endif %}
         {% endwith %}
+        {% endif %}
         <div>
             <div class="progress load_publications_descendants" style="display: none">
                 <div class="indeterminate blue darken-1"></div>
@@ -192,6 +201,3 @@
 </div>
 </div>
 {% endfor %}
-{% if publications.has_next %}
-<a id="load-comments" class="waves-effect waves-light btn-large blue darken-1 white-text center" href="?page={{ publications.next_page_number }}">Cargar comentarios</a>
-{% endif %}
