--- a/photologue/templates/photologue/publication_detail.html
+++ b/photologue/templates/photologue/publication_detail.html
@@ -93,7 +93,7 @@
                                             <span class="chip">
                                                         {% avatar node.parent.p_author %}
                                                         <i class="fa fa-reply"></i> <a
-                                                    href="/publication/{{ node.parent.id }}">@{{ node.parent.p_author }} <b>#{{ node.level }}</b></a>
+                                                    href="/publication/{{ node.parent.id }}">@{{ node.parent.p_author }}: {{ node.parent.content|truncatewords_html:10|safe }}</a>
                                                 </span>
                                         {% endif %}
                                     </h2>
