--- a/skyfolk/templates/account/profile_comments.html
+++ b/skyfolk/templates/account/profile_comments.html
@@ -270,7 +270,7 @@
                                         {% endwith %}
                                         <li title="Añadir a mi skyline" id="share-{{node.pk}}" data-id="{{ node.pk }}" class={% if node.id in pubs_shared_with_me %}"remove-timeline"{% else %}"add-timeline"{% endif %}
                                         ><i
-                                        class="fa fa-quote-right" aria-hidden="true"> {{ pubs_shared|lookup:node.id }}</i></li>
+                                        class="fa fa-quote-right" aria-hidden="true"> {{ pubs_shared|lookup:node.id|intword }}</i></li>
                                     <li title="Responder" class="reply-comment"><i class="fa fa-reply"
                                                                                    id="reply-caja-comentario-{{ node.pk }}"></i>
                                     </li>
