--- a/photologue/templates/photologue/publication_detail.html
+++ b/photologue/templates/photologue/publication_detail.html
@@ -246,6 +246,7 @@
     UTILS.conn_socket();
     var infinite = new Waypoint.Infinite({
         element: $('.infinite-container')[0],
+        offset: 'bottom-in-view',
         onBeforePageLoad: function() {
             $('.loading_skyline').show();
         },
