--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -41,6 +41,8 @@ Base para la interfaz en comun de todos los usuarios.
     <script src="{{ STATIC_URL }}js/lazysizes.min.js" async=""></script>
     <script src="{{ STATIC_URL}}js/jquery.waypoints.min.js"></script>
     <script src="{{ STATIC_URL}}js/infinite.min.js"></script>
+    <script src="{{ STATIC_URL }}js/masonry.pkgd.min.js"></script>
+    <script src="{{ STATIC_URL }}js/imagesloaded.pkgd.min.js"></script> 
     {% endcompress %}
     {% block title %} <title>Skyfolk - Bienvenido.</title> {% endblock %}
     {% block extra-js %}{% endblock %}
