--- a/skyfolk/templates/account/base_news.html
+++ b/skyfolk/templates/account/base_news.html
@@ -17,6 +17,9 @@
         margin-bottom: 10px;
         float: left;
     }
+    .card .card-title {
+        font-size: inherit;
+    }
 </style>
 {% endblock %}
 
